@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v24.1.8-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2024-01-08 13:04:14, took 00:08:45, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-01-08 13:44:31, took 00:08:10, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
