@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v24.1.8-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2024-01-08 13:04:14, took 00:08:45, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-01-08 13:44:31, took 00:08:10, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
